# brodcasta

./: Makefile  README.md  docker-compose.yml  index.html  nexios-features.md  nexios_comprehensive_guide.md  pyproject.toml  start-adminer.sh
docs/: api.md  (+3 more)
server/: .env  Dockerfile  config.py  main.py  manage.py  pyproject.toml  requirements.txt  test_auth_types.py  test_somal.py  verify_stats.py
server/api/accounts/: _schema.py  routes.py
server/api/analytics/: _schema.py  routes.py
server/api/demo/: routes.py
server/api/messages/: routes.py
server/api/payments/: routes.py
server/api/projects/: _schema.py  routes.py
server/api/public/: routes.py
server/app/: __init__.py
server/app/core/: auth_backend.py  connection_store.py  idempotency.py  logging.py  mail_client.py  redis_fanout.py  redis_otp.py  redis_publisher.py  redis_service.py
server/events/: __init__.py  _messaging.py  _ping.py  _presence.py  _rooms.py  connection.py
server/migrations/models/: 0_20260124213637_init.py  1_20260124223112_update.py  2_20260219162354_update.py  2_20260219170000_analytics.py  3_20260303092803_update.py  4_20260303100021_update.py  (+3 more)
server/models/: __init__.py  _base.py  accounts.py  analytics.py  messages.py  projects.py  subscriptions.py
server/poll/: routes.py
server/scripts/: create_superuser.py  init-db.sql
server/services/: analytics_tracker.py
server/somal/: __init__.py  jwt_validator.py  middleware.py  permissions.py
server/sse/: routes.py
server/utils/: auth.py  client_token.py
server/ws/: __init__.py  enums.py  events.py  gateway.py
(+69 files in other folders)
